--- a/src/Component/MainContent/MainContent.css
+++ b/src/Component/MainContent/MainContent.css
@@ -1,33 +1,34 @@
-.main{
-    background-color: red;
-    height: 500px;
-    background-image: url("https://hips.hearstapps.com/hmg-prod/images/a715c016-210714-r21j-00902542-1648053429.jpg");
-    background-size: cover;
 
+.main{
+    background-color:rebeccapurple;
+    height: 500px;
+    background-size: cover;
+    background-position: center;
 }
 
 
 .content{
-    width: 500px;
+    width: 600px;
     height: 150px;
     margin-left: 30px;
     position: relative;
-    top: 220px;
+    top: 170px;
     background-color: transparent;
 }
 
 .content .title{
     color: red;
     text-decoration: underline,red;
-    font-size: xx-large;
+    font-size: 75px;
     
 }
 
 .content .description{
     color: white;
     padding-top: 5px;
+    padding-bottom: 5px;
     font-style: italic;
-    text-size-adjust: 5px;
+    font-size: 14px;
 }
 
 .buttons button{
@@ -44,4 +45,83 @@
 button:hover{
     color: black;
     background-color: #e6e6e6;
+}
+
+.head{
+    display: flex;
+}
+.head span{
+    color: white;
+    text-decoration: underline,red;
+    font-size: 75px;
+}
+
+@media only screen and (max-device-width: 650px) {
+
+    .main{
+        background-color:rebeccapurple;
+        height: 500px;
+        background-size: cover;
+        background-position: center;
+    }
+    .content{
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        position: relative;
+        top: 75%;
+        background-color: transparent;
+        margin: auto;
+    }
+    .content .title{
+        /*
+        color: red;
+        text-decoration: underline,red;
+        font-size: 200%;   
+        margin: 25px; 
+        margin-bottom: 0.5px;
+        */
+        display: none;
+    }
+    .content .description{
+        /*
+        color:black;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        font-style: italic;
+        font-size: 20%;
+        */
+        display: none;
+    }
+
+    .buttons{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 0;
+    }
+    .buttons button{
+        color: black;
+        background-color:transparent;
+        height: 35px;
+        width: 30%;
+        margin: 5px;
+        cursor: pointer;
+        font-weight: 25%;
+        border-radius: 5px;
+        margin-top: 8px;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
+  transition: all 0.5s; 
+
+        
+    }
+
+    .head span{
+        display: none;
+    }
+
+
+
 }
